合計金額の条件分岐を追加

--- a/PosApp/backend/db_ctl/insert/post.ipynb
+++ b/PosApp/backend/db_ctl/insert/post.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
      "output_type": "stream",
      "text": [
       "<Response [200]>\n",
-      "{'mbr_nm': 'Nick', 'birth_dt': '2023-01-01', 'sex': 'Male', 'pref': 'Tokyo', 'mbr_id': 1}\n"
+      "{'mbr_nm': 'Ema', 'birth_dt': '2024-01-01', 'sex': 'Female', 'pref': 'Tokyo', 'mbr_id': 3}\n"
      ]
     }
    ],
@@ -253,9 +253,9 @@
     "\n",
     "url = 'http://127.0.0.1:8000/member'\n",
     "body = {\n",
-    "  'mbr_nm' : 'Nick',\n",
-    "  'birth_dt' : datetime.date(2023,1,1).isoformat(),\n",
-    "  'sex' : 'Male',\n",
+    "  'mbr_nm' : 'Ema',\n",
+    "  'birth_dt' : datetime.date(2024,1,1).isoformat(),\n",
+    "  'sex' : 'Female',\n",
     "  'pref' : 'Tokyo'\n",
     "}\n",
     "res = requests.post(url, json=body)  # ここでjsonキーワード引数を使用する\n",
