--- a/PosApp/backend/db_ctl/insert/post.ipynb
+++ b/PosApp/backend/db_ctl/insert/post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "      <td>サンドラッググループ</td>\n",
        "      <td>佐賀製薬株式会社</td>\n",
        "      <td>クロルフェニラミン,テトラヒドロゾリン</td>\n",
-       "      <td>2600</td>\n",
+       "      <td>1900</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -74,7 +74,40 @@
        "      <td>-</td>\n",
        "      <td>ゼリア新薬工業株式会社</td>\n",
        "      <td>クロルフェニラミン</td>\n",
-       "      <td>1600</td>\n",
+       "      <td>800</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>アイサット抗菌</td>\n",
+       "      <td>4987103051701</td>\n",
+       "      <td>１２ｍＬ</td>\n",
+       "      <td>-</td>\n",
+       "      <td>ゼリア新薬工業株式会社</td>\n",
+       "      <td>クロルフェニラミン</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>アイスラブゲル</td>\n",
+       "      <td>4987241105274</td>\n",
+       "      <td>１００ｇ</td>\n",
+       "      <td>ロート製薬株式会社</td>\n",
+       "      <td>ロート製薬株式会社</td>\n",
+       "      <td>サリチル酸グリコール</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>アイダムALクール</td>\n",
+       "      <td>4987154601641</td>\n",
+       "      <td>１５ｍＬ</td>\n",
+       "      <td>グレートアンドグランド</td>\n",
+       "      <td>キョーリンリメディオ株式会社</td>\n",
+       "      <td>クロルフェニラミン,テトラヒドロゾリン</td>\n",
+       "      <td>2100</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -82,16 +115,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        販売名         ＪＡＮコード  包装単位      発売元企業名      製造販売業者名  \\\n",
-       "1  アイクリスタ11  4981736222712  １５ｍＬ  サンドラッググループ     佐賀製薬株式会社   \n",
-       "2   アイサット抗菌  4987103046301  １０ｍＬ           -  ゼリア新薬工業株式会社   \n",
+       "         販売名         ＪＡＮコード  包装単位       発売元企業名         製造販売業者名  \\\n",
+       "1   アイクリスタ11  4981736222712  １５ｍＬ   サンドラッググループ        佐賀製薬株式会社   \n",
+       "2    アイサット抗菌  4987103046301  １０ｍＬ            -     ゼリア新薬工業株式会社   \n",
+       "3    アイサット抗菌  4987103051701  １２ｍＬ            -     ゼリア新薬工業株式会社   \n",
+       "4    アイスラブゲル  4987241105274  １００ｇ    ロート製薬株式会社       ロート製薬株式会社   \n",
+       "5  アイダムALクール  4987154601641  １５ｍＬ  グレートアンドグランド  キョーリンリメディオ株式会社   \n",
        "\n",
        "                 有効成分名    価格 セルフメディケーション税制対象  \n",
-       "1  クロルフェニラミン,テトラヒドロゾリン  2600               1  \n",
-       "2            クロルフェニラミン  1600               1  "
+       "1  クロルフェニラミン,テトラヒドロゾリン  1900               1  \n",
+       "2            クロルフェニラミン   800               1  \n",
+       "3            クロルフェニラミン  1200               1  \n",
+       "4           サリチル酸グリコール  1000               1  \n",
+       "5  クロルフェニラミン,テトラヒドロゾリン  2100               1  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +146,76 @@
     "df['有効成分名'] = df['有効成分名'].str.replace('、',',')\n",
     "df['セルフメディケーション税制対象'] = df['セルフメディケーション税制対象'].astype(str)\n",
     "df = df.fillna('-')\n",
-    "df.head(2)\n"
+    "df.head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>販売名</th>\n",
+       "      <th>ＪＡＮコード</th>\n",
+       "      <th>包装単位</th>\n",
+       "      <th>発売元企業名</th>\n",
+       "      <th>製造販売業者名</th>\n",
+       "      <th>有効成分名</th>\n",
+       "      <th>価格</th>\n",
+       "      <th>セルフメディケーション税制対象</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3683</th>\n",
+       "      <td>エスタックイブ</td>\n",
+       "      <td>4987300032008</td>\n",
+       "      <td>30錠</td>\n",
+       "      <td>エスエス製薬株式会社</td>\n",
+       "      <td>エスエス製薬株式会社</td>\n",
+       "      <td>イブプロフェン</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          販売名         ＪＡＮコード 包装単位      発売元企業名     製造販売業者名    有効成分名    価格  \\\n",
+       "3683  エスタックイブ  4987300032008  30錠  エスエス製薬株式会社  エスエス製薬株式会社  イブプロフェン  2600   \n",
+       "\n",
+       "     セルフメディケーション税制対象  \n",
+       "3683               1  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['ＪＡＮコード']=='4987300032008']"
    ]
   },
   {
@@ -147,20 +255,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [500]>\n"
+     ]
+    }
+   ],
    "source": [
-    "# selected_dict = dict(df.iloc[5647])\n",
+    "# url = 'http://127.0.0.1:8000/item/'\n",
     "# body = {\n",
-    "#   'prd_cd' : selected_dict['ＪＡＮコード'],\n",
-    "#   'prd_name' : selected_dict['販売名'],\n",
-    "#   'pac_unit' : selected_dict['包装単位'],\n",
-    "#   'sale_company' : selected_dict['発売元企業名'],\n",
-    "#   'mnf_company' : selected_dict['製造販売業者名'],\n",
-    "#   'ingrdnt' : selected_dict['有効成分名'],\n",
-    "#   'prd_price' : int(selected_dict['価格']),\n",
-    "#   'smd_yn_fg' : selected_dict['セルフメディケーション税制対象']\n",
+    "#   'prd_cd' : '4987241148820',\n",
+    "#   'prd_name' : 'メンソレータムアクネス25メディカルクリームc',\n",
+    "#   'pac_unit' : '16g',\n",
+    "#   'sale_company' : 'ロート製薬',\n",
+    "#   'mnf_company' : 'ロート製薬',\n",
+    "#   'ingrdnt' : 'イブプロフェンピコノール、イブプロピルメチルフェノール',\n",
+    "#   'prd_price' : int(1200),\n",
+    "#   'smd_yn_fg' : '1'\n",
     "# }\n",
     "\n",
     "# res = requests.post(url,json.dumps(body))\n",
